--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
 
-    
+    implementation "androidx.activity:activity-ktx:1.1.0"
 
 
 
